# opend

./: .directory  .gitignore  .gitmodules  .travis.yaml  .travis.yml  ARCHITECTURE.md  CONTRIBUTING.md  DIFFERENCES.md  Dockerfile.aarch64  GOALS.md  LICENSE  LICENSE.md  Makefile  QOI-ideas.txt  README.md  README.txt  TODO  TODO.md  TODO.txt  _dub.json  all.d  alloc.d  appveyor.yml  base.d  bench_ldexp_frexp.d  binrange.d  build.txt  circle.yml  cor.d  design.md  distrib.d  download_doveralls.sh  dub.json  dub.sdl  dub.selections.json  erupt.py  example.cpp  example.yaml  gamma.d  gen-docs.sh  (+33 more)
.circleci/: config.yml
.dub/: version.json
bench/: .gitignore  Mt19937_bench.d  README.md  dub.json  randindex_bench.d
changelog/: private-this.dd
doc/: Makefile  cairo.ddoc  custom.css  custom.ddoc  gen_modlist.d  run_examples_custom.js
docs/: ikod.containers.compressedlist.CompressedList.Page._freeMap.html  ikod.containers.compressedlist.CompressedList.Page.html  ikod.containers.compressedlist.CompressedList.clear.html  ikod.containers.compressedlist.CompressedList.insertFront.html  ikod.containers.hashmap.HashMap.byKey.html  ikod.containers.hashmap.HashMap.byPair.html  ikod.containers.hashmap.HashMap.grow_factor.2.html  ikod.containers.hashmap.HashMap.grow_factor.html  ikod.containers.hashmap.HashMap.remove.html  ikod.containers.hashmap.HashMap.size.html  ikod.containers.hashmap.KeyNotFound.html  ikod.containers.hashmap.KeyNotFound.this.html  ikod.containers.hashmap.KeyRemoved.this.html  ikod.containers.unrolledlist.UnrolledList.Iterator.empty.html  ikod.containers.unrolledlist.UnrolledList.Iterator.front.html  ikod.containers.unrolledlist.UnrolledList.Iterator.html  ikod.containers.unrolledlist.UnrolledList.Iterator.popFront.html  ikod.containers.unrolledlist.UnrolledList.Iterator.reset.html  ikod.containers.unrolledlist.UnrolledList.back.html  ikod.containers.unrolledlist.UnrolledList.html  ikod.containers.unrolledlist.UnrolledList.insert.html  ikod.containers.unrolledlist.UnrolledList.popBack.html  ikod.containers.unrolledlist.UnrolledList.popFront.html  ikod.containers.unrolledlist.UnrolledList.pushBack.html  ikod.containers.unrolledlist.UnrolledList.pushFront.html  ikod.containers.unrolledlist.UnrolledList.remove.html  ikod.containers.unrolledlist.UnrolledList.unstableRange.html  index.html  search-results.html  style.css
docs-src/: custom-formats.md
druntime/: Makefile  parse_tagged_hier.sh
etc/: dec2flt_table.py
example/: dub.json  example
examples/: devices.d  dub.json  dub.selections.json  example  getpath.d  layers.d  least_squares.cpp  printdirs.d
generated-docs/: ikod.containers.compressedlist.CompressedList.html  ikod.containers.compressedlist.CompressedList.popFront.html  ikod.containers.compressedlist.html  ikod.containers.hash.html  ikod.containers.hashmap.HashMap.byValue.html  ikod.containers.hashmap.HashMap.capacity.html  ikod.containers.hashmap.HashMap.clear.html  ikod.containers.hashmap.HashMap.fetch.html  ikod.containers.hashmap.HashMap.get.html  ikod.containers.hashmap.HashMap.getOrAdd.html  ikod.containers.hashmap.HashMap.grow_factor.1.html  ikod.containers.hashmap.HashMap.html  ikod.containers.hashmap.HashMap.length.html  ikod.containers.hashmap.HashMap.opBinaryRight.1.html  ikod.containers.hashmap.HashMap.put.html  ikod.containers.html  ikod.containers.unrolledlist.UnrolledList.Iterator.empty.html  ikod.containers.unrolledlist.UnrolledList.Iterator.popFront.html  ikod.containers.unrolledlist.UnrolledList.back.html  ikod.containers.unrolledlist.UnrolledList.insert.html  ikod.containers.unrolledlist.UnrolledList.popBack.html  ikod.containers.unrolledlist.UnrolledList.popFront.html  ikod.containers.unrolledlist.UnrolledList.remove.html  ikod.containers.unrolledlist.UnrolledList.unstableRange.html
ion-integration-tester/: dub.json  dub.sdl
ldc/: CHANGELOG.md  CMakeLists.txt  README.md  common.conf.in  ldc2.conf.in  ldc2_install.conf.in  ldc2_phobos.conf.in
libraries/: README.md  datastructures.d  extractor.d  list.json
libraries/upstream/mir-integral/: .travis.yml  README.md  meson.build
libraries/upstream/mir-ion/meson-example/: meson.build
libraries/upstream/mir-ion/meson-example/subprojects/: mir-algorithm.wrap  mir-core.wrap  mir-cpuid.wrap
libraries/upstream/mir-random/: .gitignore  Dockerfile  appveyor.yml  dub.sdl  meson.build  meson_options.txt
libraries/upstream/mir-random/bench/flex/: normal_dist.d
libraries/upstream/mir-random/examples/flex_plot/: test_arcsine.d  test_beta.d  test_different_c_values.d  test_double_dist.d  test_gamma.d  test_normal.d
libraries/upstream/mir-random/examples/flex_plot/flex_common_pack/flex_common/: hatsqueeze.d  hist.d
libraries/upstream/mir-random/source/mir/random/: ndvariable.d
libraries/upstream/mir-random/source/mir/random/engine/: linear_congruential.d  package.d  splitmix.d
libraries/upstream/mir-random/source/mir/random/flex/internal/: transformations.d  types.d
libraries/upstream/mir-stat/: meson.build
libraries/upstream/mir-stat/.github/workflows/: d.yml
libraries/upstream/mir-stat/source/mir/math/internal/: linearAlgebra.d  log_beta.d
libraries/upstream/mir-stat/source/mir/stat/: constant.d  transform.d
libraries/upstream/mir-stat/source/mir/stat/descriptive/: multivariate.d  package.d
libraries/upstream/mir-stat/source/mir/stat/distribution/: bernoulli.d  beta.d  cornish_fisher.d  exponential.d  f.d  gamma.d  geometric.d  invcdf.d  laplace.d  log_normal.d  logistic.d  rayleigh.d  students_t.d  uniform.d  uniform_discrete.d
libraries/upstream/mir-stat/subprojects/: lapack-d.wrap
libraries/upstream/taggedalgebraic/: .gitignore  meson.build
libraries/upstream/taggedalgebraic/source/taggedalgebraic/: taggedunion.d
meson-example/: test.c
opend/: README.md  opend.d  test_runner.d
phobos/: Makefile
source/: app.d  ast.d  binrange.d  dynload.d  functions.d  general.d  image.d  intel.d  isfreedesktop.d  lexer.d  md4c.d  package.d  painlesstraits.d  parser.d  types.d  (+5 more)
source/taggedalgebraic/: meson.build  package.d  taggedalgebraic.d  taggedunion.d  visit.d
(+1441 files in other folders)
